k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
  namespace: microservice-demo
spec:
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
